shader class added, vertex and fragment shader separate files created

--- a/learnopengl_tut/learnopengl_tut.vcxproj
+++ b/learnopengl_tut/learnopengl_tut.vcxproj
@@ -137,6 +137,14 @@
   <ItemGroup>
     <ClCompile Include="..\src\glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Shader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="frag_shader.fs" />
+    <None Include="vert_shader.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
