--- a/learnopengl_tut/learnopengl_tut.vcxproj
+++ b/learnopengl_tut/learnopengl_tut.vcxproj
@@ -138,13 +138,18 @@
     <ClCompile Include="..\src\glad.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\stb_image.h" />
     <ClInclude Include="Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="frag_shader.fs" />
     <None Include="vert_shader.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\textures\wooden_container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
