--- a/learnopengl_tut/learnopengl_tut.vcxproj.filters
+++ b/learnopengl_tut/learnopengl_tut.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="shaders">
       <UniqueIdentifier>{ed853aa2-e489-4525-b542-6ce63ff2cc1b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="textures">
+      <UniqueIdentifier>{14980b93-bc51-4623-a25d-6bd3e7bcda2b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -27,9 +30,15 @@
     <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -40,5 +49,10 @@
     <None Include="frag_shader.fs">
       <Filter>shaders</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\textures\wooden_container.jpg">
+      <Filter>textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
