--- a/learnopengl_tut/learnopengl_tut.vcxproj
+++ b/learnopengl_tut/learnopengl_tut.vcxproj
@@ -149,6 +149,7 @@
     <None Include="vert_shader.vs" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\textures\awesomeface.png" />
     <Image Include="..\textures\wooden_container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
