--- a/learnopengl_tut/learnopengl_tut.vcxproj.filters
+++ b/learnopengl_tut/learnopengl_tut.vcxproj.filters
@@ -54,5 +54,8 @@
     <Image Include="..\textures\wooden_container.jpg">
       <Filter>textures</Filter>
     </Image>
+    <Image Include="..\textures\awesomeface.png">
+      <Filter>textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
