add texture class

--- a/learnopengl_tut/learnopengl_tut.vcxproj
+++ b/learnopengl_tut/learnopengl_tut.vcxproj
@@ -139,10 +139,12 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\stb_image.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="frag_shader.fs" />
